# DL_class

./: .~DL.docx  DL.docx  README.md  environment.yml  requirements.txt
exam_LRX/: ~$综述.docx  综述.docx
exam_LRX/cpp/: CMakeLists.txt  work1.cpp  work10.cpp  work11.cpp  work12.cpp  work13.cpp  work2.cpp  work3.cpp  work4.cpp  work5.cpp  work6.cpp  work7.cpp  work8.cpp  work9.cpp
exam_LRX/cpp/package/opencv/: setup_vars_opencv4.cmd
exam_LRX/py/: work1.py  work10.py  work11.py  work12.py  work13.py  work2.py  work3.py  work4.py  work6.py  work7.py  work8.py  work9.py
exam_latest/dataset/ETT-small/: readme.md
exam_latest/dataset/electricity/: readme.md
exam_latest/dataset/exchange_rate/: exchange_rate.csv  readme.md
exam_latest/dataset/home_electricity/: household_power_consumption.csv  readme.md
exam_latest/dataset/illness/: national_illness.csv  readme.md
exam_latest/dataset/weather/: readme.md
exam_latest/exam_CMM/: training_log.txt  work1.py  work2.py  work3.py  work4.py  work5.py  work6.py  work7.py  work8.py
exam_latest/exam_CMM/work7/: work7.py
exam_latest/exam_LRX/: CMakeLists.txt  training_log.txt  work1.cpp  work2.cpp  work3.cpp  work4.cpp  work5.cpp  work6.cpp  work7.py  work8.py  作业分析的md5值 请先核验.txt  综述.docx
exam_latest/exam_LRX/package/opencv/x64/: CMakeLists.txt
exam_latest/exam_LRX/work7/: work7.py
exam_latest/exam_LRX/work8/: work8.py
exam_latest/exam_TB/: work1.py  work2.py  work3.py  work4.py  work5.py  work6.py  work7.py  work8.py  深度学习和图像处理.docx
exam_latest/exam_TB/work7/: work7.py
exam_latest/exam_TB/work8/: work8.py
py/: test-pytorch.py  test-tens.py  work10.py  work11.py  work2.py  work3.py  work5.py  work6.py  work7.py  work8.py  work9.py
